# Causis

./: .gitignore  CMakeLists.txt  README.md
assets/logos/: index.html
examples/: logic.au  program.au
include/causis/: AST.h  Binding.h  Environment.h  FunctionValue.h  Interpreter.h  Language.h  Lexer.h  Parser.h  ReturnSignal.h  Token.h  TokenType.h  Value.h  ValueType.h
src/: CMakeCache.txt  Interpreter.cpp  Language.cpp  Lexer.cpp  Makefile  Parser.cpp  causis  cmake_install.cmake  main.cpp
tests/: parser_debug.cpp
